[Mac] Increase infobar height under Material Design.

Under Material Design the infobar height has increased slightly.

R=avi@chromium.org
BUG=593664

Review URL: https://codereview.chromium.org/1885903003

Cr-Commit-Position: refs/heads/master@{#387146}

Former-commit-id: 7fada7682f1b88e2615ef3261ed86e0b0a5f2765